--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,20 +3,24 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
   <%= stylesheet_link_tag "style", "token-input", "formtastic", "formtastic_changes", "jquery.autocomplete" %>
   <!--[if IE 6]><%= stylesheet_link_tag 'formtastic_ie6' %><![endif]-->
   <!--[if IE 7]><%= stylesheet_link_tag 'formtastic_ie7' %><![endif]-->
+  <%= stylesheet_link_tag "colorbox.css" %>
+  <%= stylesheet_link_tag "themes/iwyg/jquery.ui.theme.css" %>
+  <%= stylesheet_link_tag "themes/iwyg/jquery-ui-1.8.11.custom.css" %>
+  <%= stylesheet_link_tag "themes/iwyg/agents/#{users_browser}" if File.exist?("app/assets/stylesheets/themes/iwyg/agents/#{users_browser}.css") %>
+
   <%= javascript_include_tag :application %>
+  <%= javascript_include_tag "jquery-ui.js" %>
+  <%= javascript_include_tag "i18n/jquery-ui-i18n.js" %>
   <%= javascript_include_tag "rails.validations" %>
   <%# javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" %> 
   <%= javascript_include_tag "jquery-ui-timepicker-addon.js" %>                                               
   <%= javascript_include_tag "jquery.tokeninput" %>
   <%= javascript_include_tag "jquery.colorbox" %>
-  <%= stylesheet_link_tag "colorbox.css" %>  
-  <%= stylesheet_link_tag "themes/iwyg/jquery.ui.theme.css" %>  
-  <%= stylesheet_link_tag "themes/iwyg/jquery-ui-1.8.11.custom.css" %> 
-  <%= javascript_include_tag "i18n/jquery-ui-i18n.js" %>
-  <%= stylesheet_link_tag "themes/iwyg/agents/#{users_browser}" if File.exist?("app/assets/stylesheets/themes/iwyg/agents/#{users_browser}.css") %>
+  
 
   <%= csrf_meta_tag %>
   
