--- a/app/assets/stylesheets/enhanced.css
+++ b/app/assets/stylesheets/enhanced.css
@@ -1,6 +1,6 @@
 /* TAGS */
 
-# autocomplete of tags in item-form
+/* autocomplete of tags in item-form */
 .ac_results {
   width:100px !important;
 }
