--- a/app/views/share/_pings.html.erb
+++ b/app/views/share/_pings.html.erb
@@ -2,8 +2,8 @@
 <div class="pingarea font-smaller">
  <% if !current_user.pinged?(@resource) || @resource.multiple?  %>
     <%= render :partial => "pings/form", :locals => {:pingable => pingable} %>
- <% else %>
-  <%= t("resources.alreadyPingedOrResourceIsMultiple") %>
+ <%# else %>
+  <%# t("resources.alreadyPingedOrResourceIsMultiple") %>
  <% end %>
 </div>
 <% elsif not logged_in? %>
