--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="change_password">
   <h1><%= t("password.change").html_safe %></h1>
   
-  <%= semantic_form_for(resource_name, resource, :url => password_path(resource_name), :html => { :method => :put, :class => "formular shadowed ui-corner-all" }) do |f| %>
+  <%= semantic_form_for(resource, :url => password_path(resource_name), :html => { :method => :put, :class => "formular shadowed ui-corner-all" }) do |f| %>
     <%= render "share/error_messages", :target => resource %>
     <%= f.inputs do %>
       <%= f.input :reset_password_token, :as => :hidden %>
