--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,6 @@
 <div class="forgot_password">
   <h1><%= t("login.label.forgotPassword") %></h1>
-  <%= semantic_form_for(resource_name, resource, :url => password_path(resource_name), :html => { :class => "formular shadowed ui-corner-all" }) do |f| %>	
+  <%= semantic_form_for(resource, :url => password_path(resource_name), :html => { :class => "formular shadowed ui-corner-all" }) do |f| %>	
     <%= render "share/error_messages", :target => resource %>
     <%= f.inputs do %>
       <%= f.input :email %>
