--- a/app/views/layouts/userarea.html.erb
+++ b/app/views/layouts/userarea.html.erb
@@ -11,12 +11,7 @@
         &raquo; <%= link_to @active_menuitem_l1, @active_menuitem_l1_link %>
       <% end %>
       <% if @active_menuitem_l2 %>
-
-<<<<<<< HEAD:app/views/layouts/userarea.rhtml
-        &raquo; <%= link_to t("#{@active_menuitem_l2}.plural").html_safe, @active_menuitem_l2_link %>
-=======
-        &raquo; <%= link_to t("#{@active_menuitem_l2}.plural".html_safe), @active_menuitem_l2_link %>
->>>>>>> b8bf1de05dcc249302d441b1b7401423cee17e29:app/views/layouts/userarea.html.erb
+	&raquo; <%= link_to "#{@active_menuitem_l2}".html_safe, @active_menuitem_l2_link %>
       <% end %>
     </h1>
     <%  if logged_in? && @user.location %>
