--- a/app/views/meetups/_form.html.erb
+++ b/app/views/meetups/_form.html.erb
@@ -28,7 +28,7 @@
 
 <% if params[:item] %>
 
-  <% semantic_form_for @meetup, :method => "get", :url => meetups_path("item[ping]" => params[:item][:ping], "item[attachable_id]" => params[:item][:attachable_id]) do |f| %>
+  <% semantic_form_for @meetup, :method => "post", :url => meetups_path("item[ping]" => params[:item][:ping], "item[attachable_id]" => params[:item][:attachable_id]) do |f| %>
 
     <%= render "share/error_messages", :target => @meetup %>
     <div id="tabs">
@@ -80,7 +80,7 @@
 
 <% else %>
 
-  <%= semantic_form_for @meetup, :method => "get" do |f| %>
+  <%= semantic_form_for @meetup do |f| %>
 
     <%= render "share/error_messages", :target => @meetup %>
     <div id="tabs">
