--- a/app/views/layouts/mailbox.html.erb
+++ b/app/views/layouts/mailbox.html.erb
@@ -2,19 +2,22 @@
 <div class="button new">
   <%# link_to t("mailbox.newMessage"), new_sent_path %>
 </div>
-<div id="mailbox" class="sub2cols ui-corner-all">
-  <div id="usermailbox" class="subcol1">
-    <div class="menu vertical folder">
-      <ul>
+<div id="mailbox" class="ui-corner-all">
+  <div class="subcol1">
+    <div class="menu folder">
+      <ul class="horizontal">
         <% for folder in current_user.folders do %>
-          <li><%= link_to_unless_current t("mailbox.#{folder.title.downcase}"), mailbox_path(folder) %>       
+          <li class="button">
+		<%= link_to_unless_current t("mailbox.#{folder.title.downcase}"), mailbox_path(folder) %>
           </li>
         <% end %>
-        <li><%= nav_link t("mailbox.sent"), :sent %></li>
+        <li class="button">
+		<%= nav_link t("mailbox.sent"), :sent %>
+	</li>
       </ul>
     </div>
   </div>
-  <div id="usermessages" class="subcol2">
+  <div id="usermessages">
     <%= yield %>
   </div>   
 </div>
