--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -88,11 +88,7 @@
 
 /* Content  */
 #content {
-    background:transparent url(/assets/content_bg.png);
-    border:1px solid #d6daca;
-    -moz-border-radius:16px;
-    -webkit-border-radius:16px;
-    border-radius:16px 16px;
+    background:transparent;
 
     color:#3f1504;
     height:auto !important;
