setup user_preferences

--- a/app/views/user_preferences/edit.html.erb
+++ b/app/views/user_preferences/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @user_preference %> |
-<%= link_to 'Back', user_preferences_path %>
+<%= link_to 'Back', user_preferences_index_path %>
