--- a/app/views/user_preferences/_form.html.erb
+++ b/app/views/user_preferences/_form.html.erb
@@ -1,4 +1,4 @@
-<%= semantic_form_for @user_preference do |f| %>
+<%= semantic_form_for @user_preferences do |f| %>
   <%= f.inputs do %>
     <%= f.input :user_id %>
     <%= f.input :custom_id %>
