--- a/app/views/items/_itemmenu.html.erb
+++ b/app/views/items/_itemmenu.html.erb
@@ -7,7 +7,9 @@
           :method => :delete %>
     </li>
   <% else %>
-    <li class="button"><%= link_to t("follow"), follow_item_path, :method => :put if not current_user.following?(item) %></li>
+		<% if not current_user.following?(item) %>
+    <li class="button"><%= link_to t("follow"), follow_item_path, :method => :put %></li>
+	  <% end %>
   <% end %>
   </ul>
 <div class="clear" ></div>
