--- a/app/views/meetups/_form.html.erb
+++ b/app/views/meetups/_form.html.erb
@@ -113,9 +113,6 @@
         <% end %>
       </div>
       <div id="who">
-        <div class="button new">
-    <%# link_to t("formtastic.labels.meetup.invite_users").html_safe, "#" %>
-        </div>
         <%= f.inputs do %>
           <% if @meetup.users.size > 0 %>
             <%= f.input :users, :as => :check_boxes, :collection => @meetup.users, :member_label => Proc.new { |u| "#{render :partial => "share/usertiny_unlinked", :locals => { :user => u }}".html_safe } %>
@@ -130,7 +127,7 @@
     </div>
     <%= f.buttons do %>
       <br />
-      <%= f.submit t("save") %>
+    <%= f.action :submit, :label => t("save") %>
     <% end %>
   <% end %>
 
