--- a/app/views/share/userarea/_profileusermenu.html.erb
+++ b/app/views/share/userarea/_profileusermenu.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? and user.login != current_user.login %>
-  <ul class="font-smaller button horizontal">
+  <ul class="font-smaller horizontal">
     <li class="button">
       <%= link_to t("menu.user.sendMessage"), new_sent_path(:to => user), :remote => true, :id => "send_message" %>
     </li>
