--- a/app/views/layouts/mailbox.html.erb
+++ b/app/views/layouts/mailbox.html.erb
@@ -1,16 +1,13 @@
 <h2><%=h t("title.mailbox" )%></h2>
-<div class="button new">
-  <%# link_to t("mailbox.newMessage"), new_sent_path %>
-</div>
 <div id="mailbox" class="sub2cols ui-corner-all">
   <div id="usermailbox" class="subcol1">
-    <div class="menu vertical folder">
-      <ul>
+    <div class="menu folder">
+      <ul class="horizontal">
         <% for folder in current_user.folders do %>
-          <li><%= link_to_unless_current t("mailbox.#{folder.title.downcase}"), mailbox_path(folder) %>       
+          <li class="button"><%= link_to_unless_current t("mailbox.#{folder.title.downcase}"), mailbox_path(folder) %>       
           </li>
         <% end %>
-        <li><%= nav_link t("mailbox.sent"), :sent %></li>
+        <li class="button"><%= nav_link t("mailbox.sent"), :sent %></li>
       </ul>
     </div>
   </div>
