devise lockable for users

--- a/app/assets/stylesheets/global/main.css
+++ b/app/assets/stylesheets/global/main.css
@@ -71,7 +71,7 @@ cite:after {
     content: close-quote;
 }
 h1, h2, h3, h4, h5, h6 {
-	font-family:"Georigia";
+	font-family:"Georigia", serif;
 	font-style:italic;
 	font-weight:normal;
 	color: #0b0d14;
